Sprint8: Dates and Duration feature