@@ -1,6 +1,8 @@
 package tracker.service;
 
-import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import tracker.model.Epic;
 import tracker.model.Subtask;
@@ -14,12 +16,16 @@ import java.util.List;
 import static org.junit.jupiter.api.Assertions.*;
 import static tracker.Status.DONE;
 
-class FileBackedTaskManagerTest {
+class FileBackedTaskManagerTest extends TaskManagerTest<FileBackedTaskManager> {
     private static final File file = new File("resources/FileBackedTaskManagerTest.txt");
-    private FileBackedTaskManager taskManager;
 
-    @AfterAll
-    public static void afterAll() throws IOException {
+    @BeforeEach
+    public void beforeEach() {
+        init(FileBackedTaskManager.loadFromFile(file));
+    }
+
+    @AfterEach
+    public void afterEach() throws IOException {
         // clears file after finishing
         FileWriter fileWriter = new FileWriter(file, false);
         fileWriter.close();
@@ -27,7 +33,6 @@ class FileBackedTaskManagerTest {
 
     @Test
     void loadFromFile() {
-        taskManager = FileBackedTaskManager.loadFromFile(file);
         assertEquals(1, taskManager.getNextTaskId(), "Next Id must be 1 initially");
         assertTrue(taskManager.getAllTasks().isEmpty(), "Tasks should be empty initially.");
         assertTrue(taskManager.getAllEpics().isEmpty(), "Epics should be empty initially.");
@@ -47,7 +52,7 @@ class FileBackedTaskManagerTest {
 
         assertNotNull(tasks, "Tasks not returned");
         assertEquals(1, tasks.size(), "Tasks count is not correct");
-        assertEquals(task, tasks.get(0), "Task in list is not equal to original Task.");
+        assertEquals(task, tasks.getFirst(), "Task in list is not equal to original Task.");
 
         task.setName("updateTask");
         task.setDescription("Test updateTask description");
@@ -58,7 +63,8 @@ class FileBackedTaskManagerTest {
         final Task updatedTask = taskManager.getTask(taskId);
 
         assertEquals("updateTask", updatedTask.getName(), "Incorrect updated Task name");
-        assertEquals("Test updateTask description", updatedTask.getDescription(), "Incorrect updated Task description");
+        assertEquals("Test updateTask description", updatedTask.getDescription(),
+                "Incorrect updated Task description");
         assertEquals(DONE, updatedTask.getStatus(), "Incorrect updated Task status");
 
         final int epicId = taskManager.getNextTaskId();
@@ -66,7 +72,8 @@ class FileBackedTaskManagerTest {
         taskManager.addEpic(epic);
 
         final int subtaskId = taskManager.getNextTaskId();
-        final Subtask subtask = new Subtask(subtaskId, "Subtask addSubtask", "Subtask addSubtask description", epic);
+        final Subtask subtask = new Subtask(subtaskId, "Subtask addSubtask",
+                "Subtask addSubtask description", epic);
         taskManager.addSubtask(subtask);
 
 
@@ -81,7 +88,7 @@ class FileBackedTaskManagerTest {
 
         assertNotNull(subtasks, "Subtasks not returned");
         assertEquals(1, subtasks.size(), "Subtasks count is not correct");
-        assertEquals(subtask, subtasks.get(0), "Subtask in list is not equal to original Subtask.");
+        assertEquals(subtask, subtasks.getFirst(), "Subtask in list is not equal to original Subtask.");
 
         subtask.setName("updateSubtasks");
         subtask.setDescription("Test updateSubtasks description");
@@ -92,7 +99,8 @@ class FileBackedTaskManagerTest {
         final Subtask updatedSubtask = taskManager.getSubTask(subtaskId);
 
         assertEquals("updateSubtasks", updatedSubtask.getName(), "Incorrect updated Subtasks name");
-        assertEquals("Test updateSubtasks description", updatedSubtask.getDescription(), "Incorrect updated Subtasks description");
+        assertEquals("Test updateSubtasks description", updatedSubtask.getDescription(),
+                "Incorrect updated Subtasks description");
         assertEquals(DONE, updatedSubtask.getStatus(), "Incorrect updated Subtasks status");
 
         taskManager.deleteAllSubtasks();
@@ -101,5 +109,12 @@ class FileBackedTaskManagerTest {
         taskManager = FileBackedTaskManager.loadFromFile(file);
         assertTrue(taskManager.getAllSubtasks().isEmpty(), "Subtasks count is not correct after delete");
         assertTrue(taskManager.getAllTasks().isEmpty(), "Tasks count is not correct after delete");
+    }
+
+    @Test
+    void loadFromFileException() {
+        File file = new File("resources/wrong_file_name.txt");
+        Assertions.assertThrows(ManagerSaveException.class, () -> FileBackedTaskManager.loadFromFile(file),
+                "Wrong exception during reading from non-existing file");
     }
 }
